--- a/internal/src/index.html
+++ b/internal/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset='utf-8' />
-    <title>Vejledninger</title>
+    <title>Varmeplan</title>
     <script type='text/javascript' src='http://localhost:8080/clientapi/minimap2/mmloader.js'></script>
   </head>
 
